# webrtc_avb_wrapper

./: CMakeLists.txt  README  README.md
include/: Utils.hpp  avb_dataTransfer.hpp  connection.hpp  dataTransferBase.hpp  webrtc_dataTransfer.hpp
src/: avb_dataTransfer.cpp  connection.cpp  webrtc_dataTransfer.cpp
test/: CMakeLists.txt  connection_test.cpp
